summaries in tables U1

--- a/u1review.html
+++ b/u1review.html
@@ -183,7 +183,7 @@
       .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
       .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
       </style>
-      <table class="tg">
+      <table summary="Chart of monthly income and expenses.  Column headers are income and expenses.  No row headers." class="tg">
       <tr>
         <th class="tg-13pz" scope="col">Income</th>
         <th class="tg-13pz" scope="col"><span style="font-weight:bold">Expenses</span></th>
@@ -236,7 +236,7 @@
       .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
       .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
       </style>
-      <table class="tg">
+      <table  summary="Chart to calculate taxes owed.  Column headers are tax rate, single, amount of income to be taxed in this range, taxed owed on this part of income.  Row headers are income ranges."  class="tg">
       <tr>
         <th class="tg-13pz" scope="col">Tax Rate</th>
         <th class="tg-13pz" scope="col">Single</th>
