--- a/u1s10.html
+++ b/u1s10.html
@@ -155,7 +155,7 @@
       .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
       .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
       </style>
-      <table class="tg">
+      <table summary="Monthly credit card bill.  Column headers are month, principal, APR, sum of principal and interest, minimum payment, and amount still owed.  Row headers are months." class="tg">
             <tr>
               <th class="tg-13pz" scope="col">Month that minimum <br>payment is to be made</th>
               <th class="tg-13pz" scope="col">Principal amount owed</th>
@@ -240,7 +240,7 @@
       .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
       .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
       </style>
-      <table class="tg">
+      <table summary="Monthly credit card bill.  Column headers are month, principal, APR, sum of principal and interest, minimum payment, and amount still owed.  Row headers are months." class="tg">
           <tr>
             <th class="tg-13pz" scope="col">Month that minimum<br>payment is to<br>be made</th>
             <th class="tg-13pz" scope="col">Principal amount owed</th>
