summaries in tables U2

--- a/u2s6.html
+++ b/u2s6.html
@@ -139,7 +139,7 @@
         .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
         .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
         </style>
-        <table class="tg">
+        <table summary="Average Teacher salaries by state.  Column headers are average salary, number of states, and relative frequency.  Row headers are salary ranges." class="tg">
           <tr>
             <th class="tg-13pz" scope="col">Average Salary</th>
             <th class="tg-13pz" scope="col">Number of States</th>
@@ -195,7 +195,7 @@
     .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
     .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
     </style>
-    <table class="tg">
+    <table summary="U. S. Vehicle sales in September 2015.  Column headers are type of vehicle, number sold, and relative frequency.  Row headers are types of vehicles." class="tg">
         <tr>
           <th class="tg-13pz" scope="col">Type of Vehicle</th>
           <th class="tg-13pz" scope="col">Number Sold</th>
@@ -250,7 +250,7 @@
     .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
     .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
     </style>
-    <table class="tg">
+    <table summary="percentage of U.S. population that is foreign-born.  Column headers are year and percent foreign-born.  Row headers are years." class="tg">
           <tr>
             <th class="tg-13pz" scope="col">Year</th>
             <th class="tg-13pz" scope="col">Percent Foreign-Born</th>
