--- a/u2s8.html
+++ b/u2s8.html
@@ -140,7 +140,7 @@
         .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
         .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
         </style>
-        <table class="tg">
+        <table summary="World's highest paid athletes 2018.  Column headers are rank, name, total pay, salary/winnings, endorsements, and sport.  Row headings are rank." class="tg">
           <tr>
             <th class="tg-13pz"scope="row">Rank</th>
             <th class="tg-13pz" scope="row">Name</th>
