--- a/u2s9.html
+++ b/u2s9.html
@@ -153,7 +153,7 @@
     .tg .tg-6esd{font-weight:bold;font-size:18px;text-align:left}
     .tg .tg-x4j0{font-size:18px;text-align:left}
     </style>
-    <table class="tg">
+    <table summary="price of snowboard at 2 stores.  Column headers are Middleton Snowboards and Snowboard Central.  No row headers." class="tg">
       <tr>
         <th class="tg-6esd" scope="col">Middletown Snowboards</th>
         <th class="tg-6esd" scope="col">Snowboard Central</th>
@@ -176,7 +176,7 @@
     .tg .tg-hgcj{font-weight:bold;text-align:center}
     .tg .tg-s268{text-align:left}
     </style>
-    <table class="tg">
+    <table summary="5 number summary of snowboard date.  Column headers are Middleton Snowboards and Snowboard Central.  No row headers." class="tg">
       <tr>
         <th class="tg-hgcj" scope="col">Middletown Snowboards</th>
         <th class="tg-hgcj" scope="col">Snowboard Central</th>
