--- a/u2s3.html
+++ b/u2s3.html
@@ -169,7 +169,7 @@
     .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 18px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
     .tg .tg-nx8p{font-size:18px;text-align:left;vertical-align:top}
     </style>
-    <table class="tg">
+    <table summary="Number of games played and cost.  Column headers are games and cost in dollars.  Row headers are the number of games played." class="tg">
       <tr>
         
         <th class="tg-nx8p" scope="col">Games</th>
