summaries in tables

--- a/u2review.html
+++ b/u2review.html
@@ -295,7 +295,7 @@
     .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
     .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
     </style>
-    <table class="tg">
+    <table summary="Frequency table for final grades for 20 students.  Header columns are rating, frequency, and relative frequency.  Header rows are grades." class="tg">
               <tr>
                 <th class="tg-13pz" scope="col">Rating</th>
                 <th class="tg-13pz" scope="col">Frequency</th>
@@ -374,7 +374,7 @@
                 .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
                 .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
                 </style>
-                <table class="tg">
+                <table summary="List of prices paid for 2017 Honda Civics.  No header columns or rows." class="tg">
                           <tr>
                               <th class="tg-13pz" scope="col">2017 Honda Civic Price Paid</th>
                            
