--- a/u3fs.html
+++ b/u3fs.html
@@ -144,7 +144,7 @@
           .tg .tg-0lax{text-align:left;vertical-align:top}
           .tg .tg-hgcj{text-align:center;font-weight:bold}
           </style>
-          <table class="tg">
+          <table summary="Area formulas.  Column header is area formulas.  Row headers are geometric shapes." class="tg">
             <tr>
               <th class="tg-hgcj" colspan="2" scope="col">Area Formulas</th>
             </tr>
@@ -182,7 +182,7 @@
                         .tg .tg-5ua9{font-weight:bold;text-align:left}
                         .tg .tg-0lax{text-align:left;vertical-align:top}
                         </style>
-                        <table class="tg">
+                        <table summary="Volume and surface area formulas.  Column headers are volume and surface area.  Row headers are geometric shapes." class="tg">
                           <tr>
                             <th class="tg-s268" ></th>
                             <th class="tg-hgcj" scope="col">Volume</th>
