--- a/u3s1.html
+++ b/u3s1.html
@@ -195,7 +195,7 @@ Part I: Discovering the Metric System
   .tg .tg-7hap{font-weight:bold;font-size:20px;text-align:left;vertical-align:top}
   .tg .tg-nx8p{font-size:18px;text-align:left;vertical-align:top}
   </style>
-  <table class="tg">
+  <table summary="Metric system.  Column headers are metric prefixes.  Column rows are prefix, symbol, and meaning." class="tg">
     <tr>
       <th class="tg-60hs" scope="col">Prefix</th>
       <th class="tg-7hap" scope="col">kilo-</th>
