--- a/u4review.html
+++ b/u4review.html
@@ -162,10 +162,14 @@
     .tg .tg-s268{text-align:left}
     .tg .tg-0lax{text-align:left;vertical-align:top}
     </style>
-    <table class="tg">
+    <table summary="total charges for u-haul rental.  Header columns are miles and cost.  No header rows." class="tg">
       <tr>
-        <th class="tg-s268"><p class="solution">0 &emsp;&emsp;</p></th>
-        <th class="tg-s268"><p class="solution">39.95</p></th>
+        <th class="tg-s268" scope="col">Miles Driven</th>
+        <th class="tg-s268" scope="col">Cost to Rent U-Haul</th>
+      </tr>
+      <tr>
+        <td class="tg-s268" scope="col"><p class="solution">0 &emsp;&emsp;</p></td>
+        <td class="tg-s268" scope="col"><p class="solution">39.95</p></td>
       </tr>
       <tr>
         <td class="tg-s268"><p class="solution">5</p></td>
