--- a/u4s4.html
+++ b/u4s4.html
@@ -164,10 +164,10 @@
     .tg .tg-s268{text-align:left}
     .tg .tg-0lax{text-align:left;vertical-align:top}
     </style>
-    <table class="tg">
+    <table summary="xy table of values.  Header columns Cartridges and total cost.  No header rows." class="tg">
       <tr>
-        <th class="tg-5ua9"><p class="solution">Cartridges</p></th>
-        <th class="tg-5ua9"><p class="solution">Total Cost</p></th>
+        <th class="tg-5ua9" scope="col"><p class="solution">Cartridges</p></th>
+        <th class="tg-5ua9" scope="col"><p class="solution">Total Cost</p></th>
       </tr>
       <tr>
         <td class="tg-s268"><p class="solution">0</p></td>
@@ -232,10 +232,10 @@
     .tg .tg-s268{text-align:left}
     .tg .tg-0lax{text-align:left;vertical-align:top}
     </style>
-    <table class="tg">
+    <table summary="xy table of values.  Header columns are number of songs and amount left on the card.  No header rows." class="tg">
       <tr>
-        <th class="tg-5ua9"><p class="solution">Number of Songs</p></th>
-        <th class="tg-5ua9"><p class="solution">Amount Left on Card</p></th>
+        <th class="tg-5ua9" scope="col"><p class="solution">Number of Songs</p></th>
+        <th class="tg-5ua9" scope="col"><p class="solution">Amount Left on Card</p></th>
       </tr>
       <tr>
         <td class="tg-s268"><p class="solution">1</p></td>
@@ -300,10 +300,10 @@
         .tg .tg-s268{text-align:left}
         .tg .tg-0lax{text-align:left;vertical-align:top}
         </style>
-        <table class="tg">
+        <table summary="xy table of values.  Header columns time and depth of pool.  No header rows." class="tg">
           <tr>
-            <th class="tg-5ua9"><p class="solution">Time</p></th>
-            <th class="tg-5ua9"><p class="solution">Depth of Pool</p></th>
+            <th class="tg-5ua9" scope="col"><p class="solution">Time</p></th>
+            <th class="tg-5ua9" scope="col"><p class="solution">Depth of Pool</p></th>
           </tr>
           <tr>
             <td class="tg-s268"><p class="solution">1</p></td>
@@ -372,10 +372,10 @@
             .tg .tg-s268{text-align:left}
             .tg .tg-0lax{text-align:left;vertical-align:top}
             </style>
-            <table class="tg">
+            <table summary="xy table of values.  Header columns mileage and amount of gas in the tank.  No header rows." class="tg">
               <tr>
-                <th class="tg-5ua9"><p class="solution">Mileage</p></th>
-                <th class="tg-5ua9"><p class="solution">Amount of Gas in Tank</p></th>
+                <th class="tg-5ua9" scope="col"><p class="solution">Mileage</p></th>
+                <th class="tg-5ua9" scope="col"><p class="solution">Amount of Gas in Tank</p></th>
               </tr>
               <tr>
                 <td class="tg-s268"><p class="solution">5</p></td>
