--- a/u3s5.html
+++ b/u3s5.html
@@ -158,7 +158,7 @@
       .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
       .tg .tg-s268{text-align:left}
       </style>
-      <table class="tg">
+      <table summary="Guided solution to area of garage.  Column headers are area of rectangle, area of triangle, and area of garage.  No row headers." class="tg">
         <tr>
           <th class="tg-s268" scope="col"> Area of Rectangle</th>
           <th class="tg-s268" scope="col">Area of Triangle</th>
