--- a/u4s5.html
+++ b/u4s5.html
@@ -201,14 +201,14 @@
     .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
     .tg .tg-s268{text-align:left}
     </style>
-    <table class="tg">
+    <table summary="depth of the peak of an undersea volcano.  Header columns are time in millenium and depth in meters.  No header rows. " class="tg">
         <tr>
-                <th class="tg-s268"><p class="solution"><b>Time in Millenium</b></p></th>
-                <th class="tg-s268"><p class="solution"><b>Depth in meters</b></p></th>
+                <th class="tg-s268" scope="col"><p class="solution"><b>Time in Millenium</b></p></th>
+                <th class="tg-s268" scope="col"><p class="solution"><b>Depth in meters</b></p></th>
         </tr>
       <tr>
-        <th class="tg-s268"><p class="solution">10</p></th>
-        <th class="tg-s268"><p class="solution">-25</p></th>
+        <td class="tg-s268"><p class="solution">10</p></td>
+        <td class="tg-s268"><p class="solution">-25</p></td>
       </tr>
       <tr>
         <td class="tg-s268"><p class="solution">-10</p></td>
@@ -263,11 +263,11 @@
             .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
             .tg .tg-s268{text-align:left}
             </style>
-            <table class="tg">
+            <table summary="Cost for a health club membership.  Header colums are number of months and cost of membership.  No header rows." class="tg">
               <tr>
         
-                <th class="tg-s268">  <p class="solution"><b>Number of Months</b></p></th>
-                <th class="tg-s268"><p class="solution"><b>Cost of Membership</b></p></th>
+                <th class="tg-s268" scope="col">  <p class="solution"><b>Number of Months</b></p></th>
+                <th class="tg-s268" scope="col"><p class="solution"><b>Cost of Membership</b></p></th>
               </tr>
               <tr>
                 <td class="tg-s268"><p class="solution">2</p></td>
