--- a/u4s5.html
+++ b/u4s5.html
@@ -230,7 +230,7 @@
         <li>What was the depth of the volcano peak 10,000 years ago?</li>
         <p class="solution">75 meters below the ocean</p>
         <li>Write an equation for the depth of the volcano peak. (Model the depth as a negative number.)</li>
-        <p class="solution">y = 2.5x + 50</p>
+        <p class="solution">y = 2.5x - 50</p>
 
         <li>When will the depth of the volcano peak be -45 meters?</li>
         <p class="solution">in 2 millenium</p>
@@ -240,6 +240,7 @@
 
         <li>Graph the function. Label the horizontal and vertical axes and the unit of measure. Label the intervals on each axis.</li>
         <img src="images/u4blankgraph.png" alt="This is a blank coordinate plane for constructing the graph.">
+        <br>
         <p class="solution"> <img src="images/u4s5p3k.png" alt="A linear graph that increases from left to right. The x-axis represents the time in millenium and goes from -10 to 28 counting by 2. The y-axis represents the depth of the volcano in meters and goes from -90 to 50 counting by 10. The points that are plotted on the line are (10,-25), (-10,-75), (2,-45), and (20,0)." ></p>
 
     </ol>
