--- a/u1s1.html
+++ b/u1s1.html
@@ -162,7 +162,7 @@
           <p class="solution">The people sitting at the large table get more pizza.</p>
 
         </li>
-         
+        <p style="page-break-before: always">
         <li>Compare these four mixes for apple juice:
         <p><img src="images/u1s1p2a.png" alt="Mix A is 5 cups of concentrate and 8 cups of cold water.">
           
@@ -184,6 +184,7 @@
           <li>Rewrite your answers to part (b) as percents.</li>
           </ol>
         </li>
+        <p style="page-break-before: always"></p>
         <li>Multiple choice. Which of the following is a correct interpretation of the statement “Women outnumbered men by a ratio of 9 to 5”?
           <ol>
             <li> There were four more women than men.          </li>
@@ -317,6 +318,7 @@
         </ol>
 
         </li>
+        <p style="page-break-before: always"></p>
         <li>Multiple choice. Choose the fastest walker.
           <ol>
            <li> Steve walks 3 miles in 1 hour.
