--- a/u1s10.html
+++ b/u1s10.html
@@ -230,7 +230,7 @@
 </p>
 
 <p class="solution">The difference between the original amount owed and the prinicipal six months later is $298.07.</p>
-
+<p style="page-break-before: always"></p>
 <p>You recently went on vacation and charged the entire trip on your credit card. Your balance before the trip was $0, but now it is $4995. Suppose the annual interest rate is 23.24% and the minimum payment is $146.85. Complete the table to determine your credit balance after 8 months. Remember that the first month is interest free.</p>
 
 <p>
