--- a/u1s11.html
+++ b/u1s11.html
@@ -144,21 +144,21 @@
  
 <h4>Scenario 1:</h4>
 <p>In 2018 you earned $60,000 at your job. Your investments earned you $700 in interest for the year. You paid $2500 into a tax-deferred retirement account.</p>
-<p>Wages: ____________________</p>
-<p class="solution">$60,000</p>
+<p>Wages: _____________________
+<inline class="solution">$60,000</inline ></p>
 
-<p>You must pay 7.65% of your wages for Social Security and Medicare taxes. Calculate your Social Security/Medicare taxes for 2018. ____________________</p>
-<p class="solution">$4,590</p>
-<p>Gross Income (Wages + Interest): ____________________</p>
-<p class="solution">$60,700</p>
-<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________</p>
-<p class="solution">$58,200</p>
-<p>Amount of Standard Deduction: ____________________</p>
-<p class="solution">$12,000</p>
-<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________</p>
-<p class="solution">$46,200</p>
-<p>Amount of Federal Taxes owed: _____________________</p>
-<p class="solution">$6,103.50</p>
+<p>You must pay 7.65% of your wages for Social Security and Medicare taxes. Calculate your Social Security/Medicare taxes for 2018. ____________________
+<inline  class="solution">$4,590</inline ></p>
+<p>Gross Income (Wages + Interest): ____________________
+<inline  class="solution">$60,700</inline ></p>
+<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________
+<inline  class="solution">$58,200</inline ></p>
+<p>Amount of Standard Deduction: ____________________
+<inline  class="solution">$12,000</inline ></p>
+<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________
+<inline  class="solution">$46,200</inline ></p>
+<p>Amount of Federal Taxes owed: _____________________
+<inline  class="solution">$6,103.50</inline ></p>
 
 <p>
     <style type="text/css">
@@ -243,21 +243,21 @@
 <h4>Scenario 2:</h4>
 <p>In 2018 you earned $120,000 at your job. Your investments earned you $1400 in interest for the year. You paid $5000 into a tax-deferred retirement account.</p>
 
-<p>Wages: ____________________</p>
-<p class="solution">$120,000</p>
-<p>You must pay 7.65% of your wages for Social Security and Medicare taxes. Calculate your Social Security/Medicare taxes for 2018. ____________________</p>
-<p class="solution">$9,180</p>
+<p>Wages: ___________________
+<inline class="solution">$120,000</inline></p>
+<p>You must pay 7.65% of your wages for Social Security and Medicare taxes. Calculate your Social Security/Medicare taxes for 2018. ____________________
+<inline class="solution">$9,180</inline></p>
 
-<p>Gross Income (Wages + Interest): ____________________</p>
-<p class="solution">$121,400</p>
-<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________</p>
-<p class="solution">$116,400</p>
-<p>Amount of Standard Deduction: ____________________</p>
-<p class="solution">$12,000</p>
-<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________</p>
-<p class="solution">$104,400</p>
-<p>Amount of Federal Taxes owed: _____________________</p>
-<p class="solution">$19,345.50</p>
+<p>Gross Income (Wages + Interest): ____________________
+<inline class="solution">$121,400</inline></p>
+<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________
+<inline class="solution">$116,400</inline></p>
+<p>Amount of Standard Deduction: ____________________
+<inline class="solution">$12,000</inline></p>
+<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________
+<inline class="solution">$104,400</inline></p>
+<p>Amount of Federal Taxes owed: _____________________
+<inline class="solution">$19,345.50</inline></p>
 
 <p>
     <style type="text/css">
@@ -339,7 +339,7 @@
 
 
 </p>
-
+<p style="page-break-before: always"></p>
 <h4>Scenario 3:</h4>
 
 <p>2018 FICA Tax Rates
@@ -405,27 +405,27 @@
                 <p class="solution"> \( \begin{equation} \$ 19,691.10 + \$ 37.70 = \$ 19,728.80 \end{equation} \) </p>
 
 </ol>
-
+<p style="page-break-before: always"></p>
 <h4>Scenario 4:</h4>
 
 <p>In 2018 you earned minimum wage $7.25 per hour. You worked 40 hours a week for 50 weeks.  You did not earn any interest, nor did you have any tax-deferred contributions.</p>
 
-<p>Wages: ____________________</p>
-<p class="solution">$14,500</p>
-<p>You must pay 7.65% of your wages for Social Security and Medicare taxes. Calculate your Social Security/Medicare taxes for 2018. ____________________</p>
-<p class="solution">$1,109.25</p>
+<p>Wages: ____________________
+<inline class="solution">$14,500</inline></p>
+<p>You must pay 7.65% of your wages for Social Security and Medicare taxes. Calculate your Social Security/Medicare taxes for 2018. ____________________</p></p>
+<inline class="solution">$1,109.25</inline></p>
 
-<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________</p>
-<p class="solution">$14,500</p>
+<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________
+<inline class="solution">$14,500</inline>
 
-<p>Amount of Standard Deduction: ____________________</p>
-<p class="solution">$12,000</p>
+<p>Amount of Standard Deduction: ____________________
+<inline class="solution">$12,000</inline></p>
 
-<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________</p>
-<p class="solution">$2,500</p>
+<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________
+<inline class="solution">$2,500</inline></p>
 
-<p>Amount of Federal Taxes owed: _____________________</p>
-<p class="solution">$250</p>
+<p>Amount of Federal Taxes owed: _____________________
+<inline class="solution">$250</inline></p>
 
 <p>
 
@@ -507,33 +507,34 @@
             </table>
 
             </p>
+            <p style="page-break-before: always"></p>
 <h4>Scenario 5:</h4>    
 
 <p>In 2018 you earned $40,000 at your job. Your spouse earned $45,000.  You have two children. You did not earn any interest, nor did you have any tax-deferred contributions.</p>
 
-<p>Wages: ____________________</p>
-<p class="solution">$85,000</p>
+<p>Wages: ____________________
+<inline class="solution">$85,000</inline></p>
 
-<p>You must pay 7.65% of your wages for Social Security and Medicare taxes. Calculate your Social Security/Medicare taxes for 2018. ____________________</p>
-<p class="solution">$6,502.50</p>
+<p>You must pay 7.65% of your wages for Social Security and Medicare taxes. Calculate your Social Security/Medicare taxes for 2018. ____________________
+<inline class="solution">$6,502.50</inline></p>
 
-<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________</p>
-<p class="solution">$85,000</p>
+<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________
+<inline class="solution">$85,000</inline></p>
 
-<p>Amount of Standard Deduction: ____________________</p>
-<p class="solution">$24,000</p>
+<p>Amount of Standard Deduction: ____________________
+<inline class="solution">$24,000</inline></p>
 
-<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________</p>
-<p class="solution">$61,000</p>
+<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________
+<inline class="solution">$61,000</inline></p>
 
-<p>Taxes owed from table below: _____________________</p>
-<p class="solution">$6,939.00</p>
+<p>Taxes owed from table below: _____________________
+<inline class="solution">$6,939.00</inline></p>
 
-<p>Amount of Child Credit: _____________________</p>
-<p class="solution">$4000</p>
+<p>Amount of Child Credit: _____________________
+<inline class="solution">$4000</inline></p>
 
-<p>Amount of Federal Taxes owed (Calculated from table – Child credit): _______________________</p>
-<p class="solution">$2,939.00</p>
+<p>Amount of Federal Taxes owed (Calculated from table – Child credit): _______________________
+<inline class="solution">$2,939.00</inline></p>
 
 <p>
     <style type="text/css">
