--- a/u1s8.html
+++ b/u1s8.html
@@ -199,11 +199,9 @@
 
 <p class="solution"> \(\begin{equation}
         A=300 \cdot \frac{\left[\left(1+\frac{.065}{12}\right)^{12 \cdot 40}-1\right]}{(.065 / 12)}
-        \end{equation} \)</p>
+        \end{equation}= $ 685,085.68\)</p>
 
-        <p class="solution"> \(\begin{equation}
-                A= \$ 685,085.68
-                \end{equation}\)</p>
+   
 
 
 <li>How much would you need to deposit each month beginning at your child’s birth to have $20,000 in a college fund when your child turns 18 years old if you pay into an annuity that pays 7% interest compounded monthly?</li>
@@ -223,9 +221,9 @@
     <ol>
         <li>Deposit $100 per month under the mattress.</li>
 
-        <p class="solution"> \(\begin{equation}
+        <inline class="solution"> \(\begin{equation}
                 A=100 \cdot 4 \cdot 12= \$ 4800
-                \end{equation} \)</p>
+                \end{equation} \)</inline>
 
 <li>Deposit $100 per month in an annuity paying 3.5% interest compounded monthly.</li>
 
