--- a/u1s9.html
+++ b/u1s9.html
@@ -187,7 +187,7 @@
 <li>Calculate the total amount paid over the life of the loan: ____________________
   <p class="solution"> \(512.81*12*5=$30,768.60\)</p>
     </li>
-
+    <p style="page-break-before: always"></p>
     <li>Now suppose you want to buy this same car, but you started saving for it five years ago.  You just put the money aside in a cookie jar under your bed. How much money would you have needed to save per month for the last five years to accumulate enough money to buy the car without a loan?
 
     <p>Monthly savings needed: ____________________</p>
