--- a/u1s2.html
+++ b/u1s2.html
@@ -199,6 +199,7 @@
            
             </ol>
           </li>
+          <p style="page-break-before: always"></p>
         <li>Shannon’s teacher announced that 65% of the students in her history class passed the test. 
                 <ol>
                     <li> If there are 40 students in her class, how many passed the test?
@@ -260,6 +261,7 @@
               <p class="solution"> You will pay $20 for the item marked 80% off.</p>
               <p class="solution"> They are not the same.</p>
         </li>
+        <p style="page-break-before: always"></p>
         <li>Jacob has a part time job at Food City. He started out earning $7.50 an hour, but recently got a raise to $8.00 an hour. His mother, Amy, teaches full time at Pellissippi State. Her salary last year was $50,500. This year she got a raise and her current salary is $53,000. Who got the better raise?
                 <p class="solution"> Jacob: \( \frac{8.00-7.50}{7.50}=\frac{0.50}{7.50}\approx0.067\approx6.7\%\)</p>
                 <p class="solution"> Amy: \( \frac{53,000-50,500}{50,500}=\frac{2500}{50,500}=0.05=5\%\)</p>
