--- a/u1s3.html
+++ b/u1s3.html
@@ -303,8 +303,10 @@
                         </tr>
                         <tr>
                           <th class="tg-13pz" scope="row">Gallons of Gas per Week</th>
-                          <td class="tg-13pz"><p class="solution">\(\frac{240\;miles\;per\;week}{35\;mpg}=6.86\;gallons\;per\;week\)</p></td>
-                          <td class="tg-13pz"><p class="solution">\(\frac{240\;miles\;per\;week}{12\;mpg}=20\;gallons\;per\;week\)</p></td>
+                          <td class="tg-13pz"><p class="solution">\(\frac{240\;miles\;per\;week}{35\;mpg}\)</p>
+                           <p class="solution">\(=6.86\;gallons\;per\;week\)</p></td>
+                          <td class="tg-13pz"><p class="solution">\(\frac{240\;miles\;per\;week}{12\;mpg}\)</p>
+                            <p class="solution">\(=20\;gallons\;per\;week\)</p></td>
                         </tr>
                         <tr>
                           <th class="tg-13pz" scope="row">Gasoline for 5 years</th>
@@ -443,6 +445,7 @@
                       <td class="tg-13pz"><p class="solution">(256)(.20)</p></td>
                     </tr>
                   </table>
+                  <p style="page-break-before: always"></p>
                 <li> What would your healthcare costs be for the year if you choose Plan A? Assume that the copays do not count towards the deductible.
                         <p class="solution"> \(25+45+500+300+150+1264+45+225+25=$2379 \)</p>
                         <p class="solution"> Also you have to pay monthly premiums: \((133)(12)=$1596\) </p>
