--- a/u1s3.html
+++ b/u1s3.html
@@ -184,7 +184,7 @@
                             <p class="solution"> \( \frac{420}{150}=\frac{14}{5}\)</p> 
                       </li>
                       <li>What is Jack’s monthly cash flow?
-                            <p class="solution"> Income-Expenses= $2500-$1995=$505</p> 
+                            <p class="solution"> \(\text{Income} - \text{Expenses}= $2500-$1995=$505\)</p> 
                       </li>
                       <li>If Jack’s landlord raises his rent to $700 per month, what percent increase does this represent?
                             <p class="solution"> \( \frac{700-650}{650}=\frac{50}{650}=.0769=7.69\% \)</p> 
@@ -247,16 +247,16 @@
         
 
           <li>What is Sandy’s monthly cash flow?
-            <p class="solution"> \(1625-1883.33=-$258.33\) </p>
+            <p class="solution"> \(1625-1883.33= -258.33\) dollars </p>
           </li>
           <li>If Sandy receives a raise at her job so that she is making $12.00/hour and increases her number of hours worked to 30 hours per week, what will be her total monthly income? Assume there are 4 weeks in a month.
-              <p class="solution"> $12 x 30 x 4 = $1440 per month </p>
+              <p class="solution"> \($12 \cdot 30 \cdot 4 = $1440\) per month </p>
           </li>
           <li>Sandy’s new income from working due to her raise represents what percent increase in her previous income from working?
-          <p class="solution">\(\frac{New-Original}{Original}=\frac{1140-1125}{1125}=0.28=28\%\)</p>
+          <p class="solution">\(\frac{\text{New }-\text{ Original}}{\text{Original}}=\frac{1140-1125}{1125}=0.28=28\%\)</p>
           </li>
           <li>Sandy wants to begin saving $200 per month in an account that will earn interest. Based on her new monthly income, does she have enough money to meet this goal?
-              <p class="solution"> No, her new monthly cash flow is 1940-1883.33= $56.67 which is positive but less than $200. </p>
+              <p class="solution"> No, her new monthly cash flow is \(1940-1883.33=\) $56.67 which is positive but less than $200. </p>
           </li>
           <li>If Sandy is not able to save $200 per month based on her new income, in complete sentences, briefly describe what she can do to move forward so she has $200 per month for savings. 
               <p class="solution"> Sandy might get a roommate, or she could work more hours.  She might find a cheaper place to rent or eat more Ramen noodles! </p>
@@ -293,25 +293,25 @@
                         </tr>
                         <tr>
                           <th class="tg-13pz" scope="row">Insurance for 5 Years</th>
-                          <td class="tg-13pz"><p class="solution">1680 x 5 = 8400</p></td>
-                          <td class="tg-13pz"><p class="solution">840 x 5 = 4200</p></td>
+                          <td class="tg-13pz"><p class="solution">\(1680 \cdot 5 = 8400\)</p></td>
+                          <td class="tg-13pz"><p class="solution">\(840 \cdot 5 = 4200\)</p></td>
                         </tr>
                         <tr>
                           <th class="tg-13pz" scope="row"> Maintenance for 5 Years</th>
                           <td class="tg-13pz"><p class="solution">0</p></td>
-                          <td class="tg-13pz"><p class="solution">2000 x 5 = 10,000</p></td>
+                          <td class="tg-13pz"><p class="solution">\(2000 \cdot 5 = 10000\)</p></td>
                         </tr>
                         <tr>
                           <th class="tg-13pz" scope="row">Gallons of Gas per Week</th>
-                          <td class="tg-13pz"><p class="solution">\(\frac{240\;miles\;per\;week}{35\;mpg}\)</p>
-                           <p class="solution">\(=6.86\;gallons\;per\;week\)</p></td>
-                          <td class="tg-13pz"><p class="solution">\(\frac{240\;miles\;per\;week}{12\;mpg}\)</p>
-                            <p class="solution">\(=20\;gallons\;per\;week\)</p></td>
+                          <td class="tg-13pz"><p class="solution">\(\frac{240\text{ miles per week}}{35\text{ mpg}}\)</p>
+                           <p class="solution">\(=6.86\text{ gallons per week}\)</p></td>
+                          <td class="tg-13pz"><p class="solution">\(\frac{240\text{ miles per week}}{12\text{ mpg}}\)</p>
+                            <p class="solution">\(=20\text{ gallons per week}\)</p></td>
                         </tr>
                         <tr>
                           <th class="tg-13pz" scope="row">Gasoline for 5 years</th>
-                          <td class="tg-13pz"><p class="solution">6.86 x 52 x 5 x $1.99 = 3549.36</p></td>
-                          <td class="tg-13pz"><p class="solution">20 x 52 x 5 x $1.99 = 10,348</p></td>
+                          <td class="tg-13pz"><p class="solution">\(6.86 \cdot 52 \cdot 5 \cdot $1.99 = 3549.36\)</p></td>
+                          <td class="tg-13pz"><p class="solution">\(20 \cdot 52 \cdot 5 \cdot $1.99 = 10348\)</p></td>
                         </tr>
                         <tr>
                           <th class="tg-13pz" scope="row">Total</th>
@@ -325,8 +325,8 @@
               </li>
               <li>
                   When you talk to the Honda salesman, he agrees to sell the Civic to you at a 15% discount off the retail price? How much will you pay in cash for the car with the discount applied?
-                  <p class="solution">\((20,375)(.15)=3056.25\)</p>
-                  <p class="solution"> \(20,375-3056.25=$17,318.75\)</p>
+                  <p class="solution">\(20375\cdot.15=3056.25\)</p>
+                  <p class="solution"> \(20375-3056.25=$17318.75\)</p>
 
               </li>
 
@@ -411,38 +411,38 @@
                     <tr>
                       <th class="tg-13pz" scope="row">March 15th - Hospital stay</th>
                       <td class="tg-13pz">$3500</td>
-                      <td class="tg-13pz"><p class="solution">500 + (3000)(.10)</p></td>
-                      <td class="tg-13pz"><p class="solution">899 + (2601)(.20)</p></td>
+                      <td class="tg-13pz"><p class="solution">\(500 + 3000\cdot.10\)</p></td>
+                      <td class="tg-13pz"><p class="solution">\(899 + 2601\cdot.20\)</p></td>
                     </tr>
                     <tr>
                       <th class="tg-13pz" scope="row">April 24th - Emergency room visit</th>
                       <td class="tg-13pz">$2560</td>
                       <td class="tg-13pz"><p class="solution">$150</p></td>
-                      <td class="tg-13pz"><p class="solution">(2560)(.20)</p></td>
+                      <td class="tg-13pz"><p class="solution">\(2560\cdot.20\)</p></td>
                     </tr>
                     <tr>
                       <th class="tg-13pz" scope="row">May 15th - Hospital stay including surgery</th>
                       <td class="tg-13pz">$12,640</td>
-                      <td class="tg-13pz"><p class="solution">(12,640)(.10)</p></td>
-                      <td class="tg-13pz"><p class="solution">(12,640)(.20)</p></td>
+                      <td class="tg-13pz"><p class="solution">\(12640\cdot.10\)</p></td>
+                      <td class="tg-13pz"><p class="solution">\(12640\cdot.20\)</p></td>
                     </tr>
                     <tr>
                       <th class="tg-13pz" scope="row">May 29th - Specialist visit</th>
                       <td class="tg-13pz">$250</td>
                       <td class="tg-13pz"><p class="solution">$45</p></td>
-                      <td class="tg-13pz"><p class="solution">(250)(.20)</p></td>
+                      <td class="tg-13pz"><p class="solution">\(250\cdot.20\)</p></td>
                     </tr>
                     <tr>
                       <th class="tg-13pz" scope="row">June 8th - Office visit</th>
                       <td class="tg-13pz">$256</td>
                       <td class="tg-13pz"><p class="solution">$25</p></td>
-                      <td class="tg-13pz"><p class="solution">(256)(.20)</p></td>
+                      <td class="tg-13pz"><p class="solution">\(256\cdot.20\)</p></td>
                     </tr>
                     <tr>
                       <th class="tg-13pz" scope="row">September 8th - Office visit</th>
                       <td class="tg-13pz">$256</td>
                       <td class="tg-13pz"><p class="solution">$25</p></td>
-                      <td class="tg-13pz"><p class="solution">(256)(.20)</p></td>
+                      <td class="tg-13pz"><p class="solution">\(256\cdot.20\)</p></td>
                     </tr>
                   </table>
                   <p style="page-break-before: always"></p>
@@ -457,7 +457,7 @@
                     <p class="solution"> Total: \(2500+1008=$3508\) </p>
                 </li>
                 <li>What would your healthcare costs be if you have no insurance?
-                    <p class="solution"> \(256+345+3500+2560+12,640+250+256+256=$20,063\) </p>
+                    <p class="solution"> \(256+345+3500+2560+12640+250+256+256=$20063\) </p>
                 </li>
             </ol>
          
