--- a/u1s4.html
+++ b/u1s4.html
@@ -161,7 +161,7 @@
             <p class="solution"> The calculator turns off.</p>
         </li>
 
-        <li>	Turn your calculator <b>ON</b>. Describe what happens when you repeatedly press <b>2nd (˄)</b>:__________________________.
+        <li>	Turn your calculator <b>ON</b>. Describe what happens when you repeatedly press <b>2nd (^)</b>:__________________________.
             <p class="solution"> The print gets darker.</p>
         </li>
         <li>	Describe what happens when you repeatedly press <b>2nd (˅)</b>:__________________________________.
@@ -189,13 +189,13 @@
             <p class="solution"> The previous problem reappears.</p></li>
 
         <li>	Now use your left arrow <b>(<)</b> to move your cursor back to the <b>+</b>, then press <b>DEL</b>, and then press <b>2nd DEL (-)</b>. Describe how that changed the original problem that we entered from question #9._____________.
-            <p class="solution"> The + sign is changed to a -.</p></li>
+            <p class="solution"> The + sign is changed to a \(-\).</p></li>
 <p><i>(Note: Use the “Delete” or the “Insert” keys to edit problems without retyping the entire problem.)</i></p>
         <li>	Now press <b>ENTER</b> and write the answer here: ___________________________________________.
             <p class="solution"> \(33\)</p></li>
         
         <li>	Enter the problem \(\frac13 + \frac15\) by pressing <b>(1 ÷ 3) + (1 ÷ 5) ENTER</b>:__________________.
-            <p class="solution"> \(.5\overset-3\)</p></li> </li>
+            <p class="solution"> \(.5\overline 3\)</p></li> </li>
 
         <li>	Press <b>MATH ENTER ENTER</b> and write the answer here _______________________________________.
             <p class="solution"> \(\frac8{15}\)</p>
@@ -212,7 +212,7 @@
         <li>You can also use <b>MATH ENTER ENTER</b> to simplify a fraction. Simplify \(\frac{950}{1450}\) _________________.
             <p class="solution"> \(\frac{19}{29}\)</p></li>
 
-        <li>Enter the problem -1281 – (-1533) by pressing <b>(-) 1281 - (-)1533 ENTER</b> = _________.
+        <li>Enter the problem \(-1281&minus;(-1533)\) by pressing <b>(-) 1281 - (-)1533 ENTER</b> = _________.
             <p class="solution"> \(252\)</p>
         </li>
         <p><i>(Note: Use the <b>(-) </b>key for writing negative numbers and the <b>-</b> key for subtracting a value from another value. Be careful to distinguish between these 2 symbols).</i></p>
@@ -234,7 +234,7 @@
                 <p class="solution"> \(4\)</p>
         </li>
 
-        <li>Enter the problem: \(58^2\) by pressing <b>58 \(x^2\)  ENTER</b> . Write the answer here: ________________.
+        <li>Enter the problem: \(58^2\) by pressing <b>58 \(\text{x}^2\)  ENTER</b> . Write the answer here: ________________.
             <p class="solution"> \(3364\)</p></li>
 
         <li>Enter the same problem: \(58^2\) by pressing <b>58 ^ 2 ENTER</b> . Did you get the same answer as question #23?______.
@@ -256,15 +256,15 @@
         </li>
         <p><i>(Note: Be careful to use parenthesis when you are using your calculator to evaluate a negative number to a power.)</i></p>
 
-        <li>Evaluate \(\sqrt{324}\) by pressing <b>2nd \(x^2\) 324 ENTER</b> . Write your answer here:____________________.
+        <li>Evaluate \(\sqrt{324}\) by pressing <b>2nd \(\text{x}^2\) 324 ENTER</b> . Write your answer here:____________________.
             <p class="solution"> \(18\)</p>
         </li>
 
-        <li>Evaluate \(-\sqrt{324}\) by pressing <b>(-) 2nd \(x^2\) 324 ENTER</b> . Write your answer here:_________________.
+        <li>Evaluate \(-\sqrt{324}\) by pressing <b>(-) 2nd \(\text{x}^2\) 324 ENTER</b> . Write your answer here:_________________.
             <p class="solution"> \(-18\)</p>
         </li>
 
-        <li>Evaluate \(\sqrt{-324}\) by pressing <b> 2nd \(x^2\) (-)324 ENTER</b> . Write your answer here: _________________.
+        <li>Evaluate \(\sqrt{-324}\) by pressing <b> 2nd \(\text{x}^2\) (-)324 ENTER</b> . Write your answer here: _________________.
             <p class="solution"> Error: nonreal answer</p></li>
         <p><i>(Note: The answer to finding the square root of any negative number can always be described as “non-real”.)</i></p>
 
