--- a/u1s1.html
+++ b/u1s1.html
@@ -282,35 +282,35 @@
             </table>
               <ol>
                 <li>Eddie eats 75 grams of trail mix. How many calories does he eat?</li>
-                <p class="solution"> \(\frac{50\;grams}{220\;calories}=\frac{75\;grams}{x\;calories}\)</p>
-                <p class="solution"> \(50x=16,500\)</p>
-                <p class="solution"> \(\frac{\displaystyle50x}{50}=\frac{\displaystyle16,500}{50}\)</p>
+                <p class="solution"> \(\frac{50\text{ grams}}{220\text{ calories}}=\frac{75\text{ grams}}{x\text{ calories}}\)</p>
+                <p class="solution"> \(50x=16500\)</p>
+                <p class="solution"> \(\frac{\displaystyle50x}{50}=\frac{\displaystyle16500}{50}\)</p>
                 <p class="solution"> \(x=330\)</p>
                 <p class="solution"> Eddies eats 330 calories</p>
                 <li>Claire eats trail mix containing 1000 calories. How many grams of trail mix does she eat?</li>
-                <p class="solution"> \(\frac{50\;grams}{220\;calories}=\frac{x\;grams}{1000\;calories}\)</p>
-                <p class="solution"> \(50,000=220x\)</p>
-                <p class="solution"> \(\frac{\displaystyle50,000}{220}=\frac{\displaystyle220x}{220}\)</p>
+                <p class="solution"> \(\frac{50\text{ grams}}{220\text{ calories}}=\frac{x\text{ grams}}{1000\text{ calories}}\)</p>
+                <p class="solution"> \(50000=220x\)</p>
+                <p class="solution"> \(\frac{\displaystyle50000}{220}=\frac{\displaystyle220x}{220}\)</p>
                 <p class="solution"> \(x=227\)</p>
                 <p class="solution"> Claire eats 227 grams</p>
               </ol>
 
         </li>
         <li>When she drives to work, Yvonne travels 10 miles in about 15 minutes. Rico travels 23 miles in about 30 minutes. Who has the faster average speed?
-          <p class="solution"> Yvonne: \(10/15= 0.67\) miles/minute</p>
-          <p class="solution"> Rico: \(23/30= 0.77\) miles/minute</p>
+          <p class="solution"> Yvonne: \(10/15= 0.67\) miles per minute</p>
+          <p class="solution"> Rico: \(23/30= 0.77\) miles per minute</p>
           <p class="solution"> Rico is driving faster.</p>
         </li>
         <li>On the winding mountain road to Elkmont campground, visitors travel only 6 miles in 10 minutes.
           <ol>
           <li> At this speed, how long does it take a visitor to travel 18 miles?
-              <p class="solution"> \(\frac{6\;miles}{10\;minutes}=\frac{18\;miles}{x\;minutes}\)</p>
+              <p class="solution"> \(\frac{6\text{ miles}}{10\text{ minutes}}=\frac{18\text{ miles}}{x\text{ minutes}}\)</p>
               <p class="solution"> \(6x=180\)</p>
               <p class="solution"> \(x=30\)</p>
               <p class="solution"> It takes 30 minutes to travel 18 miles.</p>
           </li>
          <li> At this speed, how far do visitors go in 15 minutes?
-            <p class="solution"> \(\frac{6\;miles}{10\;minutes}=\frac{x\;miles}{15\;minutes}\)</p>
+            <p class="solution"> \(\frac{6\text{ miles}}{10\text{ minutes}}=\frac{x\text{ miles}}{15\text{ minutes}}\)</p>
               <p class="solution"> \(90=10x\)</p>
               <p class="solution"> \(x=9\)</p>
               <p class="solution"> The visitor can go 9 miles in 15 minutes.</p>
@@ -322,36 +322,36 @@
         <li>Multiple choice. Choose the fastest walker.
           <ol>
            <li> Steve walks 3 miles in 1 hour.
-              <p class="solution">  \(3/1= 3\) miles/hour</p>
+              <p class="solution">  \(3/1= 3\) miles per hour</p>
            </li>
            <li> Bill walks 5 miles in 2 hours.
-              <p class="solution">  \(5/2= 2.5\) miles/hour</p>
+              <p class="solution">  \(5/2= 2.5\) miles per hour</p>
            </li>
            <li> Joan walks 6 miles in 1.5 hours.
-              <p class="solution">  \(6/1.5= 4\) miles/hour</p>
+              <p class="solution">  \(6/1.5= 4\) miles per hour</p>
            </li>
            <li> Deena walks 12 miles in 2.5 hours.
-              <p class="solution">  \(12/2.5= 4.8\) miles/hour</p>
+              <p class="solution">  \(12/2.5= 4.8\) miles per hour</p>
            </li>
            <li> Grete walks 9 miles in 2 hours.
-              <p class="solution">  \(9/2= 4.5\) miles/hour</p>
+              <p class="solution">  \(9/2= 4.5\) miles per hour</p>
            </li>
            <p class="solution"> Deena is the fastest walker.</p>
           </ol>
         </li>
         <li>The Math Department can purchase calculators in bulk at a price of $1000 for 20. At this rate, how many calculators can they purchase for $1250?
 
-  <p class="solution"> \(\frac{$1000}{20\;calculators}=\frac{$1250}{x\;calculators}\)</p>
-              <p class="solution"> \(1000x=25,000\)</p>
+  <p class="solution"> \(\frac{$1000}{20\text{ calculators}}=\frac{$1250}{x\text{ calculators}}\)</p>
+              <p class="solution"> \(1000x=25000\)</p>
               <p class="solution"> \(x=25\)</p>
               <p class="solution"> They can purchase 25 calculators.</p>
         </li>
         <li>Sasha gives vitamins to her dogs. The recommended dosage is 2 teaspoons per day for adult dogs weighing 20 pounds. She needs to give vitamins to Campbell who weighs 75 pounds and to Rosie who weighs 7 pounds. What is the correct dosage for each dog?
-            <p class="solution">Campbell:  \(\frac{2\;teaspoons}{20\;pounds}=\frac{x\;teaspoons}{75\;pounds}\)</p>
+            <p class="solution">Campbell:  \(\frac{2\text{ teaspoons}}{20\text{ pounds}}=\frac{x\text{ teaspoons}}{75\text{ pounds}}\)</p>
             <p class="solution"> \(20x=150\)</p>
             <p class="solution"> \(x=7.5\)</p>
             <p class="solution"> Campbell's dosage is 7.5 teaspoons.</p>
-            <p class="solution">Rosie:  \(\frac{2\;teaspoons}{20\;pounds}=\frac{x\;teaspoons}{7\;pounds}\)</p>
+            <p class="solution">Rosie:  \(\frac{2\text{   teaspoons}}{20\text{pounds}}=\frac{x\text{ teaspoons}}{7\text{ pounds}}\)</p>
             <p class="solution"> \(20x=14\)</p>
             <p class="solution"> \(x=.7\)</p>
             <p class="solution"> Rosie's dosage is 0.7 teaspoons.</p>
@@ -359,13 +359,13 @@
         <li>Brenda and Nancy walk 1 mile in 15 minutes. They can keep up this pace for several hours.
           <ol>
           <li> About how far do they walk in an hour and a half?
-              <p class="solution">  \(\frac{1\;mile}{15\;minutes}=\frac{x\;miles}{90\;minutes}\)</p>
+              <p class="solution">  \(\frac{1\text{ mile}}{15\text{ minutes}}=\frac{x\text{ miles}}{90\text{ minutes}}\)</p>
               <p class="solution"> \(15x=90\)</p>
               <p class="solution"> \(x=6\)</p>
               <p class="solution"> They walk 6 miles in an hour and a half.</p>
           </li>
            <li> About how far do they walk in 65 minutes?
-              <p class="solution">  \(\frac{1\;mile}{15\;minutes}=\frac{x\;miles}{65\;minutes}\)</p>
+              <p class="solution">  \(\frac{1\text{ mile}}{15\text{ minutes}}=\frac{x\text{ miles}}{65\text{ minutes}}\)</p>
               <p class="solution"> \(15x=65\)</p>
               <p class="solution"> \(x=4.3\)</p>
               <p class="solution"> They walk 4.3 miles in 65 minutes.</p>
@@ -391,7 +391,7 @@
             <p class="solution"> A </p>
             <p class="solution">  x=8</p>
         </li>
-        <li>Find the values that make the statement correct \(\frac{}{27}=\frac{8}{36}=\frac{}{63}\).  
+        <li>Find the values that make the statement correct \(\frac{\text{blank}}{27}=\frac{8}{36}=\frac{\text{blank}}{63}\).  
             <p class="solution">  \(\frac{x}{27}=\frac{8}{36}\)</p>
             <p class="solution"> \(36x=216\)</p>
             <p class="solution"> \(x=6\)</p>
