--- a/u1s2.html
+++ b/u1s2.html
@@ -180,7 +180,7 @@
                 <li>If 40% of Sue’s DVDs are action, how many action DVDs does she have?</li>
                 <p class="solution"> \(0.40\cdot280=112\) action DVDs</p>
                 <li>If Sue gave away a fourth of her collection, how many DVDs would she have left?</li>
-               <p class="solution"> \( \frac14\cdot280=70\) silver dollars</p>
+               <p class="solution"> \( \frac14\cdot280=70\) DVDs </p>
                 <p class="solution"> \(280-70=210\) DVDs left.</p>
               </ol>
 
